start Java side work
Change-Id: Id65a1f8a95bb16fc0360a17021a391afd3c9d03f