@@ -61,7 +61,9 @@ public abstract class Operation extends KuduRpc<OperationResponse> implements Ku
     UPDATE((byte)RowOperationsPB.Type.UPDATE.getNumber()),
     DELETE((byte)RowOperationsPB.Type.DELETE.getNumber()),
     SPLIT_ROWS((byte)RowOperationsPB.Type.SPLIT_ROW.getNumber()),
-    UPSERT((byte)RowOperationsPB.Type.UPSERT.getNumber());
+    UPSERT((byte)RowOperationsPB.Type.UPSERT.getNumber()),
+    RANGE_LOWER_BOUND((byte) RowOperationsPB.Type.RANGE_LOWER_BOUND.getNumber()),
+    RANGE_UPPER_BOUND((byte) RowOperationsPB.Type.RANGE_UPPER_BOUND.getNumber());
 
     ChangeType(byte encodedByte) {
       this.encodedByte = encodedByte;
@@ -334,12 +336,25 @@ public abstract class Operation extends KuduRpc<OperationResponse> implements Ku
       return toPB();
     }
 
-    public RowOperationsPB encodeSplitRows(List<PartialRow> rows) {
-      if (rows == null || rows.isEmpty()) return null;
-      init(rows.get(0).getSchema(), rows.size());
-      for (PartialRow row : rows) {
+    public RowOperationsPB encodeSplitRowsRangeBounds(List<PartialRow> splitRows,
+                                                      List<Pair<PartialRow, PartialRow>> rangeBounds) {
+      if (splitRows.isEmpty() && rangeBounds.isEmpty()) {
+        return null;
+      }
+
+      Schema schema = splitRows.isEmpty() ? rangeBounds.get(0).getFirst().getSchema()
+                                          : splitRows.get(0).getSchema();
+      init(schema, splitRows.size() + 2 * rangeBounds.size());
+
+      for (PartialRow row : splitRows) {
         encodeRow(row, ChangeType.SPLIT_ROWS);
       }
+
+      for (Pair<PartialRow, PartialRow> bound : rangeBounds) {
+        encodeRow(bound.getFirst(), ChangeType.RANGE_LOWER_BOUND);
+        encodeRow(bound.getSecond(), ChangeType.RANGE_UPPER_BOUND);
+      }
+
       return toPB();
     }
   }
